<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#912E2E"
    android:orientation="vertical">

    <TextView
        android:id="@+id/CityTextView"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="50sp"
        android:text="@string/city_text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/CityEditText"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="-40sp"
        android:ems="3"
        android:inputType="text"
        android:text="@string/city_here"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/CountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/country_code"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/CountryEditText"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120sp"
        android:layout_marginTop="-40sp"
        android:ems="3"
        android:inputType="text"
        android:text="@string/code_here"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setValues"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250sp"
        android:layout_marginTop="-70sp"
        android:background="#FFF"
        android:onClick="setParseValues"
        android:text="@string/set_values" />


    <TextView
        android:id="@+id/humidityTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110sp"
        android:layout_marginTop="40sp"
        android:text="@string/humidity"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220sp"
        android:layout_marginTop="-27sp"
        android:text="@string/init_humid"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/temperatureTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80sp"
        android:layout_marginTop="20sp"
        android:text="@string/temperature"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220sp"
        android:layout_marginTop="-27sp"
        android:text="@string/init_temp"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/feelsText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110sp"
        android:layout_marginTop="20sp"
        android:text="@string/feels_like"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/feelsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220sp"
        android:layout_marginTop="-27sp"
        android:text="@string/feels_temp"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/windTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90sp"
        android:layout_marginTop="20sp"
        android:text="@string/wind_speed"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220sp"
        android:layout_marginTop="-27sp"
        android:text="@string/init_wind"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/CountryText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="71sp"
        android:layout_marginTop="20sp"
        android:text="@string/country_code"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/CountryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220sp"
        android:layout_marginTop="-27sp"
        android:text="@string/n_a"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140sp"
        android:layout_marginTop="20sp"
        android:background="#FFF"
        android:onClick="getWeather"
        android:text="@string/check_weather" />

    <Button
        android:id="@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170sp"
        android:layout_marginTop="70dp"
        android:background="#FFF"
        android:text="@string/go_back" />

</LinearLayout>